implemented user functions
